--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -134,6 +134,12 @@
             <version>2.7.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
